--- a/force-app/main/default/lwc/orderPlacement/orderPlacement.html
+++ b/force-app/main/default/lwc/orderPlacement/orderPlacement.html
@@ -4,14 +4,85 @@
             <lightning-record-view-form object-api-name="Parts_Order__c">
                 <lightning-layout multiple-rows>
                     <lightning-layout-item size="5">
-                        <lightning-input type="text" label="Enter Part Name" onchange={handlePartName} ></lightning-input>
+                        <lightning-input type="text" label="GME Order No." onchange={handlePartName} ></lightning-input>
                     </lightning-layout-item>
                 </lightning-layout><br/>
                 <lightning-button label="Search" variant="brand" onclick={handleSearch}></lightning-button>
             </lightning-record-view-form>
-            <div if:true={searchData}>
-                <lightning-datatable data={searchData} columns={columns} key-field="id" hide-checkbox-column="true"></lightning-datatable>
+            <template if:true={searchData}>
+                <lightning-datatable data={searchData} selected-rows={selection} onrowselection={getSelectedName} columns={columns} key-field="Id"></lightning-datatable>
+                <!-- <div class="slds-box slds-theme_default">
+                    <table class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_col-bordered">
+                        <thead>
+                            <tr>
+                                <th class="" scope="col">
+                                    <div class="slds-truncate" title="Order Info">Order Info</div>
+                                </th>
+                                <th class="" scope="col">
+                                    <div class="slds-truncate" title="Distribute Code">Distribute Code</div>
+                                </th>
+                                <th class="" scope="col">
+                                    <div class="slds-truncate" title="Order Date">Order Date</div>
+                                </th>
+                                <th class="" scope="col">
+                                    <div class="slds-truncate" title="Description">Description</div>
+                                </th>
+                                <th class="" scope="col">
+                                    <div class="slds-truncate" title="Quantity Requested">Quantity Requested</div>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <template iterator:it={searchData} onrowselection={getSelectionName} columns={columns} key-field="Id">
+                                <tr key={it.value.Id}>
+                                    <td>{it.value.Parts_Order_Number__c}</td>
+                                    <td>{it.value.Order_Date__c}</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </template>
+                        </tbody>
+                    </table>
+                </div>  -->
+            </template>
+        <template if:true={check}>
+            <div class="slds-box slds-theme_default">
+                <table class="slds-table slds-table_cell-buffer slds-table_bordered slds-table_col-bordered">
+                    <thead>
+                        <tr>
+                            <th class="" scope="col">
+                                <div class="slds-truncate" title="No">No</div>
+                            </th>
+                            <th class="" scope="col">
+                                <div class="slds-truncate" title="Part Name">Part Name</div>
+                            </th>
+                            <th class="" scope="col">
+                                <div class="slds-truncate" title="Part Code">Part Code</div>
+                            </th>
+                            <th class="" scope="col">
+                                <div class="slds-truncate" title="Ordered Product Code">Ordered Product Code</div>
+                            </th>
+                            <th class="" scope="col">
+                                <div class="slds-truncate" title="Quantity Requested">Quantity Requested</div>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <template iterator:it={lineItems}>
+                            <tr key={it.value.Id}>
+                                <td>{it.value.Parts_Order_Line_Item_Number__c}</td>
+                                <td>{it.value.Name}</td>
+                                <td>{it.value.Parts_Order__r.Parts_Order_Number__c}</td>
+                                <td>{it.value.Ordered_Product__c}</td>
+                                <td>{}</td>
+                            </tr>
+                        </template>
+                    </tbody>
+                </table>
+            </div>   
+        </template>
+                <!-- <lightning-datatable  key-field="Id" data={lineItems} columns={COLS}></lightning-datatable> -->
             </div>
-        </div>
     </lightning-card>
 </template>
